# jax-ant-arena

./: .gitignore  E1_cluster_analysis.py  README.md  all_runs_parameters.csv  analyse_multirun_data.ipynb  analyse_sweep.py  ant_arena.py  ant_simulation_analysis.csv  cluster_analysis.py  clustering_transition_report.md  generate_analysis_report.py  hydra_multirun_analysis.py  old_cluster_analysis.ipynb  pixi.toml  pyproject.toml  run_data_mapping.pkl  sync-batch.sh  temporal_analysis.py
conf/: config.yaml
conf/experiment/: E2_threshold_deposit_sweep.yaml  E3_transition_search.yaml  critical_phenomena.yaml  deposit_decay_sweep.yaml  direct_basic_test.yaml  direct_clustering_sweep.yaml  direct_test.yaml  grid_vs_direct.yaml  robustness_test.yaml  stigmergy_decay_threshold_sweep.yaml  temporal_scaling.yaml
conf/experiment/old/: direct_clustering_sweep.yaml  phase_diagram.yaml  spatial_patterns.yaml
conf/hydra/: batch.yaml  batch_ws.yaml  interactive.yaml
conf/pheromones/: direct.yaml  none.yaml  stigmergy.yaml
conf/rerun/: rerun352.yaml
experiments/: config.json  config.yaml
realdata/: convert_real_to_sim.py  how_to_use.md  pyproject.toml  save_gif.py  visualise_converted.py  visualise_real.py
simulation/: animate_sim.py  ant_simulation.py  batch_run.py  circular_arena.py  plot_elu.py  visualise_dynamics.py  visualise_sim.py  visualise_sim_mpl.py
