[tool.poetry]
name = "jax-ant-arena"
version = "0.1.0"
description = "A simulation of ant colony dynamics using JAX"
authors = ["toohuman <michael.crosscombe@proton.me>"]
readme = "README.md"
packages = [
    {include = "simulation"}
]

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
jax = ">=0.5.2,<0.6"
jaxlib = ">=0.5.2,<0.6"
matplotlib = ">=3.10.1,<4"
pyqt5 = ">=5.15.10,<6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# No script section - we'll use command line directly instead
