[tool.poetry]
name = "realdata-visualiser"
version = "0.1.0"
description = "Visualise real ant data in a PyQt5 window"
authors = ["horiguchi"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.21.0"
PyQt5 = "*"
matplotlib = "^3.5.0"
imageio = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
